# gimme_your_words

./: README.md  pyproject.toml
gimme_your_words/: __init__.py  cli.py  cookies.py  profiles.py  profiles.yaml  scraper.py
tests/: conftest.py  test_cli.py  test_cookies.py  test_profiles.py  test_scraper.py
